# ChangeLog for dev-ruby/mechanize
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/ChangeLog,v 1.18 2009/05/10 18:41:27 a3li Exp $

*mechanize-0.9.2 (10 May 2009)

  10 May 2009; Alex Legler <a3li@gentoo.org> -mechanize-0.6.11.ebuild,
  -mechanize-0.7.6.ebuild, +mechanize-0.9.2.ebuild:
  Version bump, removing old.

  18 Mar 2009; Brent Baude <ranger@gentoo.org> mechanize-0.9.0.ebuild:
  keyworded ~arch for ppc, bug 252676

  27 Dec 2008; Friedrich Oslage <bluebird@gentoo.org>
  mechanize-0.9.0.ebuild:
  Re-add ~sparc keyword, bug #252676

*mechanize-0.9.0 (27 Dec 2008)

  27 Dec 2008; Hans de Graaff <graaff@gentoo.org> +mechanize-0.9.0.ebuild:
  Version bump. Now uses nokogiri instead of hpricot, dropped ppc and sparc
  keywords due to this, #252676.

*mechanize-0.8.5 (20 Dec 2008)

  20 Dec 2008; Hans de Graaff <graaff@gentoo.org> +mechanize-0.8.5.ebuild:
  Version bump

  20 Dec 2008; Hans de Graaff <graaff@gentoo.org> -mechanize-0.6.7.ebuild,
  -mechanize-0.6.10.ebuild, -mechanize-0.7.0.ebuild,
  -mechanize-0.7.2.ebuild, -mechanize-0.7.3.ebuild, -mechanize-0.7.5.ebuild:
  Remove old versions

  08 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
  mechanize-0.7.6.ebuild:
  Added ~x86-fbsd keyword.

  07 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
  mechanize-0.7.6.ebuild:
  Add ~sparc keyword, bug #230517

*mechanize-0.7.6 (23 May 2008)

  23 May 2008; <agorf@gentoo.org> +mechanize-0.7.6.ebuild:
  Version bump to 0.7.6.

*mechanize-0.7.5 (26 Mar 2008)

  26 Mar 2008; Aggelos Orfanakos <agorf@gentoo.org> +mechanize-0.7.5.ebuild:
  Version bump to 0.7.5.

*mechanize-0.7.3 (13 Mar 2008)

  13 Mar 2008; Aggelos Orfanakos <agorf@gentoo.org> +mechanize-0.7.3.ebuild:
  Version bump to 0.7.3.

*mechanize-0.7.2 (12 Mar 2008)

  12 Mar 2008; Aggelos Orfanakos <agorf@gentoo.org> +mechanize-0.7.2.ebuild:
  Version bump to 0.7.2.
