@@ -1,8 +1,6 @@
-DIST mechanize-0.8.5.gem 79360 RMD160 81c94ef2521844aa5c7a864c40e380be06096982 SHA1 f19045da609ca891c9c0cee0de57970f5d566d44 SHA256 5a32caa59b0a00dd5b1cca2a58c0f49281a10e2d8fb3df43e2dd6329cba055b6
-DIST mechanize-0.9.0.gem 78848 RMD160 9cef701e7fcf176bb6b2b9ef0f8d73c350fd7c9c SHA1 229e8d99bba22aa895a191540ed787fd5306720c SHA256 922002b1f35d5b5bfc10884934ae3830a49f547e2322e505c165b1154c0e314a
 DIST mechanize-0.9.2.gem 80896 RMD160 ba268394964de1e257ca70a41ef736f91fc8fb1a SHA1 b71a1b1c5c416847c06af14ec77ff7b8f32a04e6 SHA256 21a9cc3baefa7eaec03d053abe3513f9445331dfc1ced0f42e8395729cb0412e
-EBUILD mechanize-0.8.5.ebuild 548 RMD160 0f55816504d3cc49050f834b4f0d57e55928160c SHA1 ae30a722e5757875afc9deba73cda51b88932d31 SHA256 c3c1d9a0bb6a0e40037369bce1a6bfa9e50a242945fff737fb85cf4a97ab488b
-EBUILD mechanize-0.9.0.ebuild 549 RMD160 9cbcdc08cc1effa48d4dc10c15ff36d155f6af10 SHA1 13c5cc2e27611f3f824f87c10f1666c1f78fb12e SHA256 9a467ea10c118138ba7aaf98d3aeca931dd129f9a029e5c54013df71f5bdeeb6
+DIST mechanize-0.9.3.gem 83456 RMD160 25639b0f7ccc3a015e97a7b47c55a777b5cc7631 SHA1 1c03c5a573b7bac5b36c2eb2716c8fa6188fdfcb SHA256 914fffbe1155fcab4df62f8c6de16568d47b9ab76902c5324fa11173690fa04a
 EBUILD mechanize-0.9.2.ebuild 598 RMD160 3d57ff291309bd32f1aab720ca9dd658a79510fa SHA1 ee17613ddc6302c164b880df7e1146d46e209869 SHA256 91a34b9e0adb1d6988e57a7cbb3f9042137700303ea5ff5b6356e43470555d8f
-MISC ChangeLog 2821 RMD160 39a400f8f104f32012869016c639313774bbf88c SHA1 dacd9e5287b9b8e0241254502ca0049ead055980 SHA256 b38ccf6dc0643119356e27fd7f96a08f83ccefb78f1bf18d77e93db77721cb37
+EBUILD mechanize-0.9.3.ebuild 600 RMD160 03912e012f26b8413bb53ade99c7033823464fa2 SHA1 c8f9ada626288464d80e2668bc7f3686110ced2f SHA256 88a9ee742bfb8cb9695a144fc5ea1e9980efd51324b52783fd4f1cb7453e5438
+MISC ChangeLog 3088 RMD160 42a3c2fe5d6307ffad1930f8452d4397c62e1cbc SHA1 72ee6a76ac01476cca95bcf360500ddaefac1bb7 SHA256 dd0bd36bf14a115756ae03811b9adef340f3d557712cd0a87bfd9cdb6e2fcd9b
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
